[package]
name = "memoized_kerney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahash = "4.1.0"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
moka = { version = "0.12.0", features = ["future"] }
geographiclib-rs = "0.2.3"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["async_tokio"] }
tokio = { version = "1.35.1", features = ["full"] }

[[bench]]
name = "my_benchmark"
harness = false
